--- a/src/web/src/main.css
+++ b/src/web/src/main.css
@@ -6,3 +6,18 @@
     box-sizing: border-box;
     font-family: "Kiona", "Roboto", sans-serif;
 }
+
+#background {
+    z-index: -10000;
+    position: fixed;
+    display: block;
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    left: 0;
+    background-size: 100% 100%;
+    background-image: url('/background.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+}
