--- a/src/web/src/pages/Home/style.module.css
+++ b/src/web/src/pages/Home/style.module.css
@@ -1,3 +1,16 @@
+.app {
+    display: block;
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    left: 0;
+    background-size: 100% auto;
+    background-image: url('/background.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+}
+
 .title {
     color: red;
 }
