--- a/src/web/src/componets/Header/style.module.css
+++ b/src/web/src/componets/Header/style.module.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.cdnfonts.com/css/sword-thrasher');
+@import url('https://fonts.cdnfonts.com/css/sweethampton');
+@import url('https://fonts.cdnfonts.com/css/farm-house-fs');
 
 .header {
     position: fixed;
@@ -13,7 +15,6 @@
     height: 65px;
 
     background-color: transparent;
-    border: 1px solid blue;
 }
 
 .nav {
@@ -52,5 +53,27 @@
     text-decoration: none;
     letter-spacing: 10px;
     font-weight: bold;
+    text-transform: uppercase;
     font-family: "Sword Thrasher", "Kiona", "Roboto", sans-serif;
+}
+
+#actor {
+    font-size: 8px;
+    text-transform: uppercase;
+    color: white;
+    font-family: "Farm House FS", "Roboto", "Ubuntu", sans-serif;
+    text-decoration: none;
+    font-weight: lighter;
+    letter-spacing: 5px;
+
+}
+
+#actor span {
+    font-size: 10px;
+    margin: 0 10px;
+    color: inherit;
+    color: white;
+    letter-spacing: 0px;
+    text-transform: capitalize;
+    font-family: "Sweethampton" !important;
 }
