--- a/src/web/src/pages/Root/style.module.css
+++ b/src/web/src/pages/Root/style.module.css
@@ -1,3 +1,72 @@
+#app {
+    background: rgb(0, 0, 0);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(5, 5, 15, 1) 60%, rgba(5, 5, 50, 1) 80%);
+}
+
+#inspector {
+    width: 150%;
+}
+
+.main {
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 70px;
+    padding: 50px;
+    display: flex;
+}
+
+.mainGroup {
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    list-style: none;
+    flex-direction: column;
+}
+
+.mainGroup li {
+    width: 100%;
+    color: white;
+    text-align: center;
+    margin: 10px 0;
+}
+
 .title {
-    color: red;
+    color: white;
+    font-size: 28px;
+}
+
+.mode {
+    width: 100%;
+    min-width: 200px;
+    height: 80px;
+    background-color: black;
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.mode>h1 {
+    width: 100%;
+    font-size: 12px;
+    text-align: left;
+    font-family: "Roboto", sans-serif;
+    margin: 2px;
+}
+
+.mode>p {
+    width: 100%;
+    font-size: 10px;
+    text-align: left;
+    font-family: "Roboto", sans-serif;
+    margin: 2px;
+}
+
+.states {
+    text-align: left !important;
+    width: 100%;
+    font-size: 18px;
 }
