--- a/src/web/src/pages/Root/style.module.css
+++ b/src/web/src/pages/Root/style.module.css
@@ -25,8 +25,6 @@
 
 .mainGroup li {
     width: 100%;
-    color: white;
-    text-align: center;
     margin: 10px 0;
 }
 
@@ -36,37 +34,46 @@
 }
 
 .mode {
-    width: 100%;
-    min-width: 200px;
+    width: 200px;
     height: 80px;
-    background-color: black;
+    background-color: white;
     border: none;
-    border-radius: 10px;
     padding: 10px;
     display: flex;
+    box-shadow: 0 0 5px 1px white;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    cursor: pointer;
 }
 
-.mode>h1 {
+#modeName {
+    margin: 0;
+    margin-top: 5px;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.modeArea {
+    padding: 5px;
+    padding-top: 0;
+    margin-top: 5px;
+    background-color: transparent;
+}
+
+.modeElement {
+    display: block;
     width: 100%;
+    text-align: left;
+    font-weight: lighter;
     font-size: 12px;
-    text-align: left;
-    font-family: "Roboto", sans-serif;
-    margin: 2px;
-}
-
-.mode>p {
-    width: 100%;
-    font-size: 10px;
-    text-align: left;
-    font-family: "Roboto", sans-serif;
-    margin: 2px;
+    padding: 2px;
+    color: black;
 }
 
 .states {
     text-align: left !important;
     width: 100%;
     font-size: 18px;
+    color: white;
 }
