--- a/src/web/src/pages/Root/style.module.css
+++ b/src/web/src/pages/Root/style.module.css
@@ -126,3 +126,65 @@
     background-color: #2050ce;
     cursor: pointer;
 }
+
+#portArea {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    max-width: 500px;
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid #2050ce;
+}
+
+#portArea svg {
+    font-size: 20px;
+    color: #2050ce;
+}
+
+#portHeader {
+    display: flex;
+    justify-content: left;
+}
+
+#portHeader h1 {
+    color: white;
+    padding: 5px;
+    margin: 5px;
+}
+
+#portHeader button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+.port {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.port button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    background: none;
+    cursor: pointer;
+}
+
+.portText {
+    font-size: 14px;
+    font-family: "Roboto", sans-serif;
+    color: white;
+}
+
+.portText::placeholder {
+    color: white;
+    font-family: "Kiona";
+}
