--- a/src/web/src/pages/Root/style.module.css
+++ b/src/web/src/pages/Root/style.module.css
@@ -182,6 +182,7 @@
     font-size: 14px;
     font-family: "Roboto", sans-serif;
     color: white;
+    width: 100% !important;
 }
 
 .portText::placeholder {
