--- a/console/src/pages/dashboard/styles.module.css
+++ b/console/src/pages/dashboard/styles.module.css
@@ -64,6 +64,8 @@
     text-transform: capitalize;
     color: white;
     padding: 10px 10px;
+    text-align: left;
+    background-color: transparent;
 }
 
 .MenuTabLink svg {
