set kiona as main font

--- a/console/src/pages/index.css
+++ b/console/src/pages/index.css
@@ -14,7 +14,8 @@
     border-radius: 0;
     list-style: none;
     text-decoration: none;
-    font-family: "Ubuntu", "Roboto", Arial;
+    font-family: "Kiona", "Roboto", Arial;
+    letter-spacing: 1px;
 }
 
 button,
