--- a/omninanny-console/src/components/AppHeader/styles.module.css
+++ b/omninanny-console/src/components/AppHeader/styles.module.css
@@ -1,12 +1,16 @@
 #main {
     display: flex;
     align-items: center;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
     width: 100%;
     height: 64px;
     border: none;
     border-bottom: 0.5px solid #3b3b3b;
-    padding: 5px 15px;
+    padding: 5px 30px;
 }
+
 
 #logo {
     width: 42px;
@@ -15,6 +19,7 @@
     margin: 0 10px;
 }
 
+.link,
 #title {
     margin: 0 10px;
     font-size: 22px;
@@ -25,4 +30,34 @@
     color: white;
     font-family: "Kiona";
     letter-spacing: 1.50px;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    height: 100%;
+    width: auto;
+}
+
+.link {
+    padding: 5px 0;
+    font-size: 12px;
+    border-bottom: 2px solid white;
+    color: #ce2050;
+    transition: all .5s ease-in-out;
+}
+
+.link:first-letter {
+    color: white;
+}
+
+.link:hover {
+    border-color: #2050ce;
+    color: white;
+}
+
+.link:hover:first-letter {
+    color: #2050ce;
 }
