--- a/omninanny-console/src/components/AppSideBar/styles.module.css
+++ b/omninanny-console/src/components/AppSideBar/styles.module.css
@@ -12,6 +12,8 @@
 
 #copyright,
 .button {
+    display: flex;
+    align-items: start;
     outline: none;
     cursor: pointer;
     width: 100%;
@@ -59,4 +61,9 @@ transition: all 0.5s ease;
 
 .selected {
     background-color: #404040;
+}
+
+.icon{
+    background-color: transparent;
+    margin: 0 10px 0 1px;
 }
