--- a/omninanny-console/src/styles/globals.css
+++ b/omninanny-console/src/styles/globals.css
@@ -2,11 +2,13 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    background-color: #1D1D1D;
+    outline: none;
+    letter-spacing: .75px;
 }
 
 html,
 body {
     max-width: 100vw;
-    overflow-x: hidden;
+    overflow-x: hidden;      
+    background-color: #1D1D1D;  
 }
