--- a/omninanny-console/src/components/AppSideBar/styles.module.css
+++ b/omninanny-console/src/components/AppSideBar/styles.module.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 180px;
+    width: 200px;
+    max-width: 200px;
     border: none;
     padding: 10px;
     margin: 50px 10px 10px 50px;
