--- a/omninanny-console/src/pages/app/styles.module.css
+++ b/omninanny-console/src/pages/app/styles.module.css
@@ -9,6 +9,7 @@
 }
 
 #main {
+    position: relative;
     padding: 30px;
     display: flex;
     flex-direction: column;
@@ -18,6 +19,7 @@
     overflow-x: hidden;
     overflow-y: auto;
     width: 100%;
+    height: 100vh;
     max-height: calc(100vh - 64px);
 }
 
@@ -42,7 +44,10 @@
 }
 
 
-#main > h1 {
+#main>h1 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     margin: 15px 0 20px 15px;
     font-size: 21px;
     font-weight: bolder;
