--- a/console/src/styles/globals.css
+++ b/console/src/styles/globals.css
@@ -4,7 +4,7 @@
     margin: 0;
     outline: none;
     letter-spacing: .75px;
-    font-family: "Rawson";
+    font-family: 'SciFly', 'Kiona', 'Rawson', sans-serif;                                                
 }
 
 html,
